--- a/css/layout.css
+++ b/css/layout.css
@@ -5,3 +5,10 @@
     --font-family: "Ibarra Real Nova", serif;
     --font-title: "Archivo", sans-serif;
 }
+
+body{
+    font-size: var(--font-family);
+}
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-title);
+}
