--- a/css/layout.css
+++ b/css/layout.css
@@ -12,3 +12,8 @@ body{
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-title);
 }
+
+.nav-link {
+    background-color: var(--accent-color)
+    color: var(var(--text-color));
+}
