--- a/css/layout.css
+++ b/css/layout.css
@@ -10,9 +10,20 @@
 
 body{
     font-size: var(--font-family);
+    font-size: 14px;
+    color: var(--text-color);
 }
-h1, h2, h3, h4, h5, h6 {
+h1 {
     font-family: var(--font-title);
+    font-size: 48px;
+}
+h2 {
+    font-family: var(--font-title);
+    font-size: 38px;
+}
+h3 {
+    font-family: var(--font-title);
+    font-size: 24px;
 }
 
 .nav-link {
